--- a/app/src/main/res/layout/classic_fiszki.xml
+++ b/app/src/main/res/layout/classic_fiszki.xml
@@ -48,46 +48,50 @@
         android:id="@+id/textViewClasicInfo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
         android:background="#C0C0C0	"
         android:gravity="center"
-        android:text="Info"
+        android:text="Naciśnij żeby zobaczyć zawartość"
         android:textSize="24sp"
+        android:clickable="true"
+        android:onClick="showInfoClicked"
         app:layout_constraintBottom_toTopOf="@+id/guidelinedown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineup" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonClassicNo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="6dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:text="Nie umie"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:onClick="classicButtonNoClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guidelinevert"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelinedown" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonClassicYes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:text="Umie"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:onClick="classicButtonYesClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelinevert"
