--- a/app/src/main/res/layout/frag_add.xml
+++ b/app/src/main/res/layout/frag_add.xml
@@ -20,8 +20,9 @@
 
     <EditText
         android:id="@+id/editTextAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -30,6 +31,7 @@
         android:inputType="textPersonName"
         android:textAlignment="textStart"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
